--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,3 +35,18 @@ jobs:
 
       - name: 📰 Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+
+      - name: 🏷️ Create tag
+        if: |
+          matrix.python-version == '3.12' && 
+          github.ref == 'refs/heads/main' && 
+          github.event_name == 'push'
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'refs/tags/${{ env.CURRENT_VERSION }}',
+              sha: context.sha
+            })
