--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -7,18 +7,30 @@ jobs:
   Version-Uniqueness-Check:
     runs-on: ubuntu-latest
     steps:
+      - name: 😎 Checkout
+        uses: actions/checkout@main
+
+      - name: 🐍 Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.12
+
+      - name: 👩‍🎨 Setup Poetry
+        run: pip install poetry
+
       # The following steps will:
       # - Fetch the current package version
       # - Check if the version already exists in the repository and fail the workflow if it does
       - name: 🦑 Fetch package version
-        run: echo "CURRENT_VERSION=v$(poetry version --short)" >> $GITHUB_ENV
+        run: |
+          echo "CURRENT_VERSION=v$(poetry version --short)" >> $GITHUB_ENV
+          echo "Version = v$(poetry version --short)"
 
       # Should only run during a pull request event into the main branch.
       # This will check if the version already exists in the registry.
       - name: 🦔 Fail if release version exists
         uses: actions/github-script@v7
         if:
-          matrix.python-version == '3.12' &&
           github.event_name == 'pull_request' &&
           github.event.pull_request.base.ref == 'main'
         with:
