--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "toadr3"
-version = "0.2.1"
+version = "0.2.2"
 description = "Tiny OpenADR 3 compatible client Python Library"
 authors = ["Jean-Paul Balabanian <jean-paul.balabanian@eviny.no>"]
 license = "Apache-2.0"
@@ -35,6 +35,7 @@ multi_line_output = 3
 [tool.pytest.ini_options]
 pythonpath = [
     ".",
+    "tests"
 ]
 asyncio_default_fixture_loop_scope = "function"
 asyncio_mode = "auto"
