Fix bugbear B011 and B904
B011 Do not `assert False` (`python -O` removes these calls),
raise `AssertionError()`

B904 Within an `except` clause, raise exceptions with
`raise ... from err` or `raise ... from None` to distinguish
them from errors in exception handling

--- a/ruff.toml
+++ b/ruff.toml
@@ -10,8 +10,8 @@ select = [
     "ARG",
     # async
     "ASYNC",
-#    # flake8-bugbear
-#    "B",
+    # flake8-bugbear
+    "B",
     # comprehensions
     "C4",
 #    # pydocstyle
