Fix pep8 naming
N818 Exception name `...Exception` should be named with an Error suffix

--- a/ruff.toml
+++ b/ruff.toml
@@ -26,8 +26,8 @@ select = [
     "F",
     # isort
     "I",
-#    # pep8 naming
-#    "N",
+    # pep8 naming
+    "N",
     # use pathlib
     "PTH",
     # pie
