Fix pytest style PT011
PT011 `pytest.raises(ValueError)` is too broad, set the `match`
parameter or use a more specific exception

--- a/ruff.toml
+++ b/ruff.toml
@@ -32,8 +32,8 @@ select = [
     "PTH",
     # pie
     "PIE",
-#    # pytest style
-#    "PT",
+    # pytest style
+    "PT",
     # Pylint
     # - Convention
 #    "PLC",
