Fix return RET503 and RET504
RET503 Missing explicit `return` at the end of function able to
return non-`None` value

RET504 Unnecessary assignment to `<name>>` before `return` statement

--- a/ruff.toml
+++ b/ruff.toml
@@ -45,8 +45,8 @@ select = [
 #    "PLW",
     # quotes
     "Q",
-#    # return
-#    "RET",
+    # return
+    "RET",
     # bandit
     "S",
     # self
