--- a/ruff.toml
+++ b/ruff.toml
@@ -36,13 +36,13 @@ select = [
     "PT",
     # Pylint
     # - Convention
-#    "PLC",
-#    # - Error
-#    "PLE",
-#    # - Refactor
-#    "PLR",
-#    # - Warning
-#    "PLW",
+    "PLC",
+    # - Error
+    "PLE",
+    # - Refactor
+    "PLR",
+    # - Warning
+    "PLW",
     # quotes
     "Q",
     # return
