Add check to avoid forks from trying to publish to pypi

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   pypi-publish:
     name: Upload release to PyPI
+    if: github.repository == 'prelectai/toadr3'
     runs-on: ubuntu-latest
     permissions:
       contents: write
