--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "toadr3"
-version = "0.11.2"
+version = "0.12.0"
 description = "Tiny OpenADR 3 compatible client Python Library"
 authors = ["Jean-Paul Balabanian <jean-paul.balabanian@eviny.no>"]
 license = "Apache-2.0"
@@ -11,6 +11,7 @@ repository = "https://github.com/prelectai/toadr3"
 python = "^3.11"
 aiohttp = "^3.10.5"
 aiodns = "^3.2.0"
+pydantic = "^2.11.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.5"
@@ -18,6 +19,10 @@ pytest = "^8.3.2"
 rich = "^13.7.1"
 pytest-aiohttp = "^1.0.5"
 pytest-asyncio = "^0.24.0"
+mypy = "^1.15.0"
+
+[tool.mypy]
+plugins = ["pydantic.mypy"]
 
 [tool.pytest.ini_options]
 pythonpath = [
